--- a/views/private_chat.ejs
+++ b/views/private_chat.ejs
@@ -120,12 +120,32 @@
 </head>
 
 <body>
+    <!-- Navbar -->
+    <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a style="color: #9198a1;" class="navbar-brand" href="/">ioChatApp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #9198a1;" class="nav-link" href="/login">Login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- Chat Container -->
     <div class="chat-container">
         <!-- User Info -->
         <div class="user-info">
-            <h4 id="username">John Doe</h4>
-            <h6 id="status">online</h6>
+            <h4 id="username"><%= friendUsername %></h4>
+            <h6 id="status"><%= status %></h6>
         </div>
 
         <!-- Chat Area -->
