Implement friend search and redirect to chat interface with friend's username

--- a/views/private_chat.ejs
+++ b/views/private_chat.ejs
@@ -134,7 +134,7 @@
                         <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/login">Login</a>
+                        <a style="color: #9198a1;" class="nav-link" href="/logout">Logout</a>
                     </li>
                 </ul>
             </div>
