--- a/views/private_chat.ejs
+++ b/views/private_chat.ejs
@@ -167,10 +167,7 @@
 
     <!-- Socket.IO -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/javascripts/chat.js"></script> <!-- JavaScript file for handling the chat -->
-    <script>
-        const username = ""
-    </script>
+    <script src="../public/javascripts/chat.js"></script> <!-- JavaScript file for handling the chat -->
+   
 </body>
 
-</html>
