--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -15,6 +15,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+JP:wght@100..900&display=swap"
         rel="stylesheet">
+      <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script defer src="/javascripts/chat.js"></script>
 
     <style>
@@ -22,11 +26,33 @@
             margin: 0;
             padding-bottom: 3rem;
             font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, serif;
+            background-color: #010409;
+
         }
     </style>
 </head>
 
 <body>
+     <!-- Navbar -->
+    <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a style="color: #9198a1;" class="navbar-brand" href="/">ioChatApp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #9198a1;" class="nav-link" href="/logout">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <main>
         <!-- Form to join the chat -->
         <form class="form-join">
