switched to cloud redis database

--- a/views/add_friend.ejs
+++ b/views/add_friend.ejs
@@ -56,6 +56,9 @@
               >
             </li>
             <li class="nav-item">
+              <a style="color: #9198a1" class="nav-link" href="/login">Login</a>
+            </li>
+             <li class="nav-item">
               <a style="color: #9198a1" class="nav-link" href="/logout">Logout</a>
             </li>
           </ul>
