refactored add_friend components

--- a/views/add_friend.ejs
+++ b/views/add_friend.ejs
@@ -88,7 +88,8 @@
           <button type="submit" class="btn btn-primary">Search</button>
         </div>
         <div id="error-id">
-          <p id="error-message" style="text-align: center"></p>
+          <p id="success-message" style=" color:green; text-align: center"></p>
+          <p id="error-message" style="color:red; text-align: center"></p>
         </div>
       </form>
     </div>
