switchd from localhost mongodb server to MongoDBAtlas

--- a/views/add_friend.ejs
+++ b/views/add_friend.ejs
@@ -51,9 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a style="color: #9198a1" class="nav-link" href="/signup"
-                >Sign Up</a
-              >
+              <a style="color: #9198a1" class="nav-link" href="/signup">Sign Up</a>
             </li>
             <li class="nav-item">
               <a style="color: #9198a1" class="nav-link" href="/login">Login</a>
