--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-     <!-- Navbar -->
+   <!-- Navbar -->
     <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a style="color: #9198a1;" class="navbar-brand" href="/">ioChatApp</a>
@@ -70,6 +70,7 @@
             <button type="submit">Send</button>
         </form>
     </main>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+</body>
 </html>
