--- a/views/add_friend.ejs
+++ b/views/add_friend.ejs
@@ -51,13 +51,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a style="color: #9198a1" class="nav-link" href="/signup">Sign Up</a>
+              <a style="color: #9198a1" class="nav-link" href="/signup"
+                >Sign Up</a
+              >
             </li>
             <li class="nav-item">
               <a style="color: #9198a1" class="nav-link" href="/login">Login</a>
             </li>
-             <li class="nav-item">
-              <a style="color: #9198a1" class="nav-link" href="/logout">Logout</a>
+            <li class="nav-item">
+              <a
+                style="color: #9198a1"
+                class="logout-button nav-link"
+                href="/logout"
+                >Logout</a
+              >
             </li>
           </ul>
         </div>
@@ -86,8 +93,8 @@
           <button type="submit" class="btn btn-primary">Search</button>
         </div>
         <div id="error-id">
-          <p id="success-message" style=" color:green; text-align: center"></p>
-          <p id="error-message" style="color:red; text-align: center"></p>
+          <p id="success-message" style="color: green; text-align: center"></p>
+          <p id="error-message" style="color: red; text-align: center"></p>
         </div>
       </form>
     </div>
