--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -1,76 +1,105 @@
 <!-- /views/rooms.ejs -->
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"
-        integrity="sha512-Xm9qbB6Pu06k3PUwPj785dyTl6oHxgsv9nHp7ej7nCpAqGZT3OZpsELuCYX05DdonFpTlBpXMOxjavIAIUwr0w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-      <link
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"
+      integrity="sha512-Xm9qbB6Pu06k3PUwPj785dyTl6oHxgsv9nHp7ej7nCpAqGZT3OZpsELuCYX05DdonFpTlBpXMOxjavIAIUwr0w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <script defer src="/javascripts/chat.js"></script>
 
     <style>
-          body {
-            margin: 0;
-            padding-bottom: 3rem;
-            background-color: #010409;
-        }
+      body {
+        margin: 0;
+        padding-bottom: 3rem;
+        background-color: #010409;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-   <!-- Navbar -->
-    <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a style="color: #9198a1;" class="navbar-brand" href="/">ioChatApp</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/logout">Logout</a>
-                    </li>
-                </ul>
-            </div>
+  <body>
+    <!-- Navbar -->
+    <nav style="background-color: #0d1117" class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a style="color: #9198a1" class="navbar-brand" href="/">ioChatApp</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a style="color: #9198a1" class="nav-link" href="/signup"
+                >Sign Up</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                style="color: #9198a1"
+                class="logout-button nav-link"
+                href="/logout"
+                >Logout</a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
     <main>
-        <!-- Form to join the chat -->
-        <form class="form-join">
-            <input type="text" id="name" maxlength="8" placeholder="Your friends name" size="8" required readonly
-                value="<%= friendUsername %>">
-            <input type="text" id="room" placeholder="Chat room" size="8" required value="<%= uniqueCode %>">
-            <button id="join" type="submit">Join</button>
-        </form>
+      <!-- Form to join the chat -->
+      <form class="form-join">
+        <input
+          type="text"
+          id="name"
+          maxlength="8"
+          placeholder="Your friends name"
+          size="8"
+          required
+          readonly
+          value="<%= friendUsername %>"
+        />
+        <input
+          type="text"
+          id="room"
+          placeholder="Chat room"
+          size="8"
+          required
+          value="<%= uniqueCode %>"
+        />
+        <button id="join" type="submit">Chat</button>
+      </form>
 
-        <!-- Display chat messages -->
-        <ul class="chat-display"></ul>
+      <!-- Display chat messages -->
+      <ul class="chat-display"></ul>
 
-        <!-- Additional chat information -->
-        <p class="user-list">Active users: <span id="user-count">0</span></p>
-        <p class="room-list">Room: <%= uniqueCode %>
-        </p>
-        <p class="activity">No recent activity</p>
+      <!-- Additional chat information -->
+      <p class="user-list">Active users: <span id="user-count">0</span></p>
+      <p class="room-list">Room: <%= uniqueCode %></p>
+      <p class="activity">No recent activity</p>
 
-        <!-- Form to send messages -->
-        <form class="form-msg">
-            <input type="text" id="message" placeholder="Your message" required>
-            <button type="submit">Send</button>
-        </form>
+      <!-- Form to send messages -->
+      <form class="form-msg">
+        <input type="text" id="message" placeholder="Your message" required />
+        <button type="submit">Send</button>
+      </form>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
+  </body>
 </html>
