--- a/views/add_friend.ejs
+++ b/views/add_friend.ejs
@@ -107,5 +107,6 @@
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./javascripts/add_friend.js"></script>
+    <script src="./javascripts/login.js"></script>
   </body>
 </html>
