fixed conversation and users-in-a-chat notification

--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -143,7 +143,7 @@
 
       <!-- Additional chat information -->
       <p class="user-list">Active users: <span id="user-count">0</span></p>
-      <p class="room-list">Room: <%= uniqueCode %></p>
+      <p class="room-list">Handshake: <%= uniqueCode %></p>
       <p class="activity">No recent activity</p>
 
       <!-- Form to send messages -->
