--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,7 +65,7 @@ body {
 /* sign-up.html */
 #signup-footer {
   position: absolute;
-  bottom: 0;
+  bottom: 10%;
   width: 100%;
   height: 40px;
   text-align: center;
