fixed bugs and acknowledge friend requests

--- a/views/add_friend.ejs
+++ b/views/add_friend.ejs
@@ -94,7 +94,7 @@
         </div>
         <div id="error-id">
           <p id="success-message" style="color: green; text-align: center"></p>
-          <p id="error-message" style="color: red; text-align: center"></p>
+          <p style="color: red;" id="error-message" style="text-align: center;"></p>
         </div>
       </form>
     </div>
