--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -127,7 +127,7 @@
       </div>
     </div>
 
-    <main>
+    <div id="notification-container"></div>    <div class="chat-container">      <header class="chat-header">        <h1><i class="fas fa-comments"></i>ioChatApp</h1>        <a href="/logout" class="btn">Logout</a>    <main>
       <!-- Form to join the chat -->
       <form class="form-join">
         <input
